# dna-cipher

./: .gitignore  .gitmodules  Cargo.toml  README.md  bytes.py
.github/workflows/: test.yaml
analysis/: analysis.ipynb
benches/: dnac_vs_aes.rs
nist_args/: block_chaining_1.txt  correlation_1.txt  dnac_test.sh  key_av_1.txt  key_high_density_2.txt  key_low_density_2.txt  plaintext_av_1.txt  plaintext_high_density_2.txt  plaintext_low_density_2.txt  random_1.txt
src/: bits.rs  dna.rs  feistel.rs  lib.rs  main.rs  sbox.rs
src/cipher/: mod.rs  sbox.rs
src/dna/: mod.rs  xors.rs
tests/: collision_test.rs  coverage_test.rs  linspan_test.rs  sac_test.rs
tests/common/: mod.rs
