[package]
name = "dna-cipher"
version = "0.1.0"
authors = ["PKopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
