[package]
name = "dna-cipher"
version = "0.1.0"
authors = ["PKopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
phf = { version = "0.11", features = ["macros"] }
stderrlog = "0.5.4"
