[package]
name = "dna-cipher"
version = "0.1.0"
authors = ["PKopel <pawel.kopel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
phf = { version = "0.11", features = ["macros"] }
stderrlog = "0.5.4"
kdam = "0.3.0"
rayon = "1.7.0"
aes = "0.8.2"

[lib]
name = "dnac"
path = "src/lib.rs"

[[bin]]
name = "dnac"
path = "src/bin/dnac.rs"

[[bin]]
name = "sac-test"
path = "src/bin/tests/sac_test.rs"
